Fix spacing

--- a/src/components/Container.module.css
+++ b/src/components/Container.module.css
@@ -5,8 +5,19 @@
   --container-padding-y: var(--container-padding);
 }
 
+.containerY {
+  padding-top: var(--container-padding-y);
+  padding-bottom: var(--container-padding-y);
+}
+
+.containerX {
+  padding-left: var(--container-padding-x);
+  padding-right: var(--container-padding-x);
+}
+
 .spacing-medium {
-  --container-padding: 20px;
+  --container-padding-x: var(--container-padding);
+  --container-padding-y: var(--container-padding);
 }
 .spacingX-medium {
   --container-padding-x: 20px;
@@ -16,23 +27,14 @@
 }
 
 .spacing-small {
-  --container-padding: var(--container-padding-small);
+  --container-padding-x: var(--container-padding-small);
+  --container-padding-y: var(--container-padding-small);
 }
 .spacingX-small {
   --container-padding-x: var(--container-padding-small);
 }
 .spacingY-small {
   --container-padding-y: var(--container-padding-small);
-}
-
-.containerY {
-  padding-top: var(--container-padding-x);
-  padding-bottom: var(--container-padding-x);
-}
-
-.containerX {
-  padding-left: var(--container-padding-y);
-  padding-right: var(--container-padding-y);
 }
 
 .md {
